--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/material": "^5.15.6",
     "axios": "^1.6.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "firebase": "^10.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
