--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@types/recharts": "^1.8.29",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "canvas": "^2.11.2",
     "eslint": "^8.56.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.33.2",
@@ -47,6 +46,7 @@
     "typescript": "^4.9.5",
     "whatwg-fetch": "^3.6.20"
   },
+  "optionalDependencies": {},
   "scripts": {
     "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
