--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "firebase": "^10.14.1",
+    "pdfjs-dist": "^4.9.155",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^9.1.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
@@ -46,7 +48,6 @@
     "typescript": "^4.9.5",
     "whatwg-fetch": "^3.6.20"
   },
-  "optionalDependencies": {},
   "scripts": {
     "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
